# FlappyBird

./: AssetManager.cpp  AssetManager.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Pipe.cpp  Pipe.hpp  main.cpp  ucrt_workaround.cpp
